--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -56,16 +56,24 @@ global:
     ux_language_text_source_ocean: |
         function() {
             var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
+            name = name.split(' ').join('\n');
             return name.split('').join('  ');
         }
     ux_language_text_source_sea: |
         function() {
             var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
+            name = name.split(' ').join('\n');
             return name.split('').join(' ');
+        }
+    ux_language_text_source_continent_stacked_only: |
+        function() {
+            var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
+            return name.split(' ').join('\n');
         }
     ux_language_text_source_continent: |
         function() {
             var name = (global.ux_language && feature['name:'+global.ux_language]) || (global.ux_language_fallback && feature['name:'+global.ux_language_fallback]) || feature['name'] || '';
+            name = name.split(' ').join('\n');
             return name.split('').join(' ');
         }
     ux_language_text_source_road_ref_and_name: |
@@ -5757,19 +5765,14 @@ layers:
                         style: italic
                         weight: normal
                         size: 12px
-                        # stroke: { color: [0.878,0.929,0.980], width: 2 }
-        lakes-z5:
-            filter: { $zoom: [5] }
+
+        lakes-labels:
+            filter: 
+                $zoom: { min: 4 }
             draw:
-                text-blend-order: { font: { size: 9px } }
-        lakes-z6:
-            filter: { $zoom: [6] }
-            draw:
-                text-blend-order: { font: { size: 11px } }
-        lakes-z8:
-            filter: { $zoom: [8] }
-            draw:
-                text-blend-order: { font: { size: 12px } }
+                text-blend-order:
+                    font:
+                        size: [[5,9px],[8,12px]]
 
     ocean-sea-labels:
         data: { source: mapzen, layer: water }
@@ -5782,18 +5785,16 @@ layers:
                     fill: [0.314,0.591,0.640] #global.text_fill_water
                     family: global.text_font_family
                     weight: normal
-                    size: 12px
+                    size: 8px
                     transform: uppercase
-        sea-early:
-            filter: { $zoom: [3], kind: sea }
-            draw: { text-blend-order: { visible: false } }
+
         ocean-spacer:
             filter: { kind: ocean }
             ocean-spacer-z1-z4:
                 filter: { $zoom: { min: 1, max: 4 } }
                 draw:
                     text-blend-order:
-                        text_source: global.ux_language_text_source_ocean
+                        text_source: global.ux_language_text_source_sea
                         text_wrap: false
             ocean-spacer-z4-up:
                 filter: { $zoom: { min: 4 } }
@@ -5801,25 +5802,18 @@ layers:
                     text-blend-order:
                         text_source: global.ux_language_text_source_ocean
                         text_wrap: false
-        ocean-labels-z1:
-            filter: { $zoom: [1] }
+        ocean-labels:
             draw:
-                text-blend-order: { font: { size: 8px } }
-        ocean-labels-z2:
-            filter: { $zoom: [2] }
-            draw:
-                text-blend-order: { font: { size: 10px } }
-        ocean-labels-z3:
-            filter: { $zoom: [3] }
-            draw:
-                text-blend-order: { font: { size: 13px } }
-        ocean-labels-z4-up:
-            filter: { $zoom: { min: 4} }
-            draw:
-                text-blend-order: { font: { size: 16px } }
+                text-blend-order:
+                    font:
+                        size: [[1,8px],[4,16px]]
+
+        sea-early:
+            filter: { $zoom: [3], kind: sea }
+            draw: { text-blend-order: { visible: false } }
 
         sea-spacer:
-            filter: { not: { kind: [ocean] }, $zoom: { min: 5 } }
+            filter: { not: { kind: [ocean] }, $zoom: { min: 4 } }
             draw:
                 text-blend-order:
                     text_source: global.ux_language_text_source_sea
@@ -5827,26 +5821,10 @@ layers:
 
         sea-labels:
             filter: { not: { kind: [ocean] } }
-            sea-labels-z4:
-                filter: { $zoom: [4] }
-                draw:
-                    text-blend-order: { font: { size: 9px } }
-            sea-labels-z5:
-                filter: { $zoom: [5] }
-                draw:
-                    text-blend-order: { font: { size: 10px } }
-            sea-labels-z6:
-                filter: { $zoom: [6] }
-                draw:
-                    text-blend-order: { font: { size: 11px } }
-            sea-labels-z7:
-                filter: { $zoom: [7] }
-                draw:
-                    text-blend-order: { font: { size: 12px } }
-            sea-labels-z8:
-                filter: { $zoom: { min: 8} }
-                draw:
-                    text-blend-order: { font: { size: 14px } }
+            draw:
+                text-blend-order:
+                    font:
+                        size: [[4,9px],[8,16px]]
 
     playa-labels:
         data: { source: mapzen, layer: [water] }
@@ -5889,24 +5867,26 @@ layers:
     earth-labels:
         data: { source: mapzen, layer: earth }
         filter: { name: true }
+        draw:
+            text-blend-order:
+                text_source: global.ux_language_text_source
         continent:
-            filter: { name: true, kind: [continent], $zoom: {max: 5} }
+            filter: { kind: [continent], $zoom: { max: 5 } }
             draw:
                 text-blend-order:
                     visible: global.text_visible_continent
+                    text_source: global.ux_language_text_source_continent_stacked_only
+                    text_wrap: false
                     font:
                         family: Varela
-                        size: 14px
+                        size: [[1,11px],[3,14px]]
                         fill: [0.762,0.525,0.428]
                         transform: uppercase
-        continent-spacer:
-            filter: { kind: continent }
-            continent-spacer-z1-z5:
-                filter: { $zoom: { min: 1, max: 5 } }
+            continent-spacer:
+                filter: { $zoom: { min: 2 } }
                 draw:
                     text-blend-order:
                         text_source: global.ux_language_text_source_continent
-                        text_wrap: false
         island:
             filter: { kind: [archipelago, island, islet] }
             draw:
